--- a/index.html
+++ b/index.html
@@ -4,26 +4,43 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./styles/styles.css">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous"
+        >
         <title>Agenda Rosa Privê</title>
     </head>
     <body>
         <header>
-            <h1>Agenda Rosa Privê</h1>
-            <div>
-                <button>Login</button>
-                <button>Assine</button>
+            <div class="d-flex justify-content-around">
+                <h1>
+                    <a href="#" class="logo">
+                        Agenda Rosa Privê
+                    </a>
+                </h1>
+                <div class="d-flex">
+                    <button class="btn btn-outline-danger h1">Login</button>
+                    <button class="btn btn-danger h1">Assine</button>
+                </div>
             </div>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Acompanhantes</li>
-                    <li>Área VIP</li>
-                    <li>Anuncie</li>
-                    <li>Busca com Filtros</li>
+            <nav class="nav d-flex justify-content-center ">
+                <ul class="d-flex m-4">
+                    <li class="p-2">Home</li>
+                    <li class="p-2">Acompanhantes</li>
+                    <li class="p-2">Área VIP</li>
+                    <li class="p-2">Anuncie</li>
+                    <li class="p-2">Busca com Filtros</li>
                 </ul>
             </nav>
         </header>
-        <main></main>
-        <footer></footer>
+        <main>
+            <div class="container"></div>
+        </main>
+        <footer>
+            <p>Todos os direitos reservados &copy;</p>
+        </footer>
     </body>
 </html>
