Adicionando imagens extras, ajustando a parte superior do header e iniciando a parte da barra de navegação

--- a/index.html
+++ b/index.html
@@ -15,24 +15,22 @@
     </head>
     <body>
         <header>
-            <div class="d-flex justify-content-around">
-                <h1>
-                    <a href="#" class="logo">
-                        Agenda Rosa Privê
-                    </a>
-                </h1>
-                <div class="d-flex">
-                    <button class="btn btn-outline-danger h1">Login</button>
-                    <button class="btn btn-danger h1">Assine</button>
+            <div class="logoAndButtons">
+                <div>
+                    <img src="./assets/img/Logo.png" alt="Logo" class="logo">
+                </div>
+                <div>
+                    <button>Login</button> /
+                    <button>Assine</button>
                 </div>
             </div>
-            <nav class="nav d-flex justify-content-center ">
-                <ul class="d-flex m-4">
-                    <li class="p-2">Home</li>
-                    <li class="p-2">Acompanhantes</li>
-                    <li class="p-2">Área VIP</li>
-                    <li class="p-2">Anuncie</li>
-                    <li class="p-2">Busca com Filtros</li>
+            <nav>
+                <ul>
+                    <li><a href="#" rel="noopener noreferrer">Home</a></li>
+                    <li><a href="#" rel="noopener noreferrer">Acompanhantes</a></li>
+                    <li><a href="#" rel="noopener noreferrer">Área VIP</a></li>
+                    <li><a href="#" rel="noopener noreferrer">Anuncie</a></li>
+                    <li><a href="#" rel="noopener noreferrer">Busca com Filtros</a></li>
                 </ul>
             </nav>
         </header>
