Footer ajustado ao final do documento e tomando a largura da tela inteira

--- a/index.html
+++ b/index.html
@@ -13,32 +13,49 @@
         >
         <title>Agenda Rosa Privê</title>
     </head>
-    <body>
+    <body class="position-relative">
         <header>
             <div class="logoAndButtons">
                 <div>
                     <img src="./assets/img/Logo.png" alt="Logo" class="logo">
                 </div>
                 <div>
-                    <button>Login</button> /
+                    <button>Login</button>
+                    /
                     <button>Assine</button>
                 </div>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#" rel="noopener noreferrer">Home</a></li>
-                    <li><a href="#" rel="noopener noreferrer">Acompanhantes</a></li>
-                    <li><a href="#" rel="noopener noreferrer">Área VIP</a></li>
-                    <li><a href="#" rel="noopener noreferrer">Anuncie</a></li>
-                    <li><a href="#" rel="noopener noreferrer">Busca com Filtros</a></li>
+                    <li>
+                        <a href="#" rel="noopener noreferrer">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" rel="noopener noreferrer">Acompanhantes</a>
+                    </li>
+                    <li>
+                        <a href="#" rel="noopener noreferrer">Área VIP</a>
+                    </li>
+                    <li>
+                        <a href="#" rel="noopener noreferrer">Anuncie</a>
+                    </li>
+                    <li>
+                        <a href="#" rel="noopener noreferrer">Busca com Filtros</a>
+                    </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div class="container"></div>
+            <div class="container">
+                <section>
+                    <h2 class="text-center">
+                        As Mais Procuradas da Semana
+                    </h2>
+                </section>
+            </div>
         </main>
-        <footer>
-            <p>Todos os direitos reservados &copy;</p>
+        <footer class="position-absolute w-100 text-center">
+            <p >Todos os direitos reservados &copy;</p>
         </footer>
     </body>
 </html>
