Criando outras sections pro restante do conteúdo e iniciando a estilização de algumas poucas coisas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         >
         <title>Agenda Rosa Privê</title>
     </head>
-    <body class="position-relative">
+    <body class="position-relative h-100">
         <header>
             <div class="logoAndButtons">
                 <div>
@@ -46,16 +46,50 @@
             </nav>
         </header>
         <main>
-            <div class="container">
+            <div class="container d-flex flex-column justify-content-center align-items-center">
                 <section>
                     <h2 class="text-center">
                         As Mais Procuradas da Semana
                     </h2>
+                    <iframe
+                        class="mt-5"
+                        width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/zI383uEwA6Q"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                    ></iframe>
+                </section>
+                <section class="mt-5">
+                    <h2 class="text-center">
+                        Vitrine das acompanhantes
+                    </h2>
+                    <div class="d-flex justify-content-center align-items-center mt-4">
+                        <div class="bg-dark text-light m-3 h-3">Acompanhante 1</div>
+                        <div class="bg-dark text-light m-3 h-3">Acompanhante 2</div>
+                        <div class="bg-dark text-light m-3 h-3">Acompanhante 3</div>
+                    </div>
+                </section>
+                <section class="mt-5">
+                    <h2 class="text-center">
+                        Perguntas Frequentes
+                    </h2>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <div>
+                            <p>
+                                1. blablablabla
+                            </p>
+                        </div>
+                    </div>
                 </section>
             </div>
         </main>
-        <footer class="position-absolute w-100 text-center">
-            <p >Todos os direitos reservados &copy;</p>
+        <footer class="position-absolute w-100 text-center mt-5 h-4">
+            <p>Copyright - 2022 | Grupo Agenda Rosa &copy;</p>
+            <p>O futuro maior site de entretenimento <span class="text-danger">adulto</span></p>
         </footer>
     </body>
 </html>
+<section></section>
