Testes com a imagem de fundo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <header>
             <div class="logoAndButtons">
                 <div>
-                    <img src="./assets/img/Logo.png" alt="Logo" class="logo">
+                    <a href="index.html">
+                        <img src="./assets/img/Logo.png" alt="Logo" class="logo">
+                    </a>
                 </div>
                 <div>
                     <button>Login</button>
@@ -26,7 +28,7 @@
                 </div>
             </div>
             <nav>
-                <ul>
+                <ul class="mb-0">
                     <li>
                         <a href="#" rel="noopener noreferrer">Home</a>
                     </li>
@@ -47,12 +49,12 @@
         </header>
         <main>
             <div class="container d-flex flex-column justify-content-center align-items-center">
-                <section>
+                <section class="mt-5">
                     <h2 class="text-center">
                         As Mais Procuradas da Semana
                     </h2>
                     <iframe
-                        class="mt-5"
+                        class="mt-4"
                         width="560"
                         height="315"
                         src="https://www.youtube.com/embed/zI383uEwA6Q"
@@ -77,7 +79,13 @@
                         Perguntas Frequentes
                     </h2>
                     <div class="d-flex justify-content-center align-items-center">
-                        <div>
+                        <div class="m-5">
+                            <p>
+                                1. blablablabla
+                            </p>
+                            <p>
+                                1. blablablabla
+                            </p>
                             <p>
                                 1. blablablabla
                             </p>
@@ -86,9 +94,13 @@
                 </section>
             </div>
         </main>
-        <footer class="position-absolute w-100 text-center mt-5 h-4">
-            <p>Copyright - 2022 | Grupo Agenda Rosa &copy;</p>
-            <p>O futuro maior site de entretenimento <span class="text-danger">adulto</span></p>
+        <footer class="position-absolute w-100 d-flex flex-column align-items-center">
+            <div class="mt-3">
+                <p>Copyright - 2022 | Grupo Agenda Rosa &copy;</p>
+                <p>
+                    O futuro maior site de entretenimento adulto
+                </p>
+            </div>
         </footer>
     </body>
 </html>
